# ptest

./: .gitignore  .opencode_sessions  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  RELEASE_NOTES.md  __init__.py  api.py  config.py  core.py  environment.py  main.py  ptest_config.json  ptest_config.yaml  pyproject.toml  pytest.ini  session-ses_3f6a-01-30.md  setup.py  test_verification_tests.yaml
.github/release-notes/: v1.10.0.md  v1.10.1.md  v1.6.0.md  v1.7.0.md  v1.9.0.md
.github/release_notes/: v1.1.0.md  v1.2.0.md  v1.3.0.md
.github/workflows/: benchmark.yml  cd.yml  ci.yml  docker-tests.yml  docker.yml  nightly.yml  python-publish.yml  release-on-main.yml
benchmark_results/: benchmark_20260212_202144.json  benchmark_20260212_202144.md  benchmark_20260212_205147.json  benchmark_20260212_205147.md
cases/: manager.py  result.py
docs/: DOCUMENTATION_REORGANIZATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  STRUCTURE.md
docs/api/: README.md  api-examples.md  python-api-guide.md  test-data-examples.md
docs/architecture/: DATABASE_SEPARATION_ARCHITECTURE_COMPLETE.md  ISOLATION_ARCHITECTURE.md  README.md  system-overview.md
docs/archived/: AGENTS.md  AGENTS_EN.md  DATABASE_ARCHITECTURE_REFACTOR.md  DATABASE_SEPARATION_ARCHITECTURE_COMPLETE.md  DATABASE_SERVER_CLIENT_SEPARATION.md  README.md  TEST_DIRECTORY_RESTRUCTURE.md  TEST_EXECUTION_README.md  UNIVERSAL_DATABASE_CONNECTOR.md  prd.md
docs/development/: CI_CD_GUIDE.md  CODE_QUALITY_GUIDE.md  CODING_STANDARDS.md  DOCUMENTATION_GUIDE.md  PYTHON_API_IMPLEMENTATION.md  README.md  development-guide.md  docker-testing-guide.md
docs/guides/: NAMING_CONVENTION.md  README.md  VIRTUALENV_USER_GUIDE.md  assertion-guide.md  environment-management.md
docs/plan/: 01_VIRTUALENV_IMPLEMENTATION_PLAN.md  02_DOCKER_IMPLEMENTATION_PLAN.md
docs/user-guide/: README.md  basic-usage.md  crash-dump-preservation.md  mysql-full-lifecycle.en.md  mysql-full-lifecycle.md  service-runtime-recovery.md  sqlite-data-state-recovery.md  stateful-api-replay.md  test-side-effect-recovery.md  workspace-recovery.md
examples/: api_examples.py  test_cases.py  virtualenv_examples.py
examples/01_basic_api_test/: README.md  ptest_config.yaml
examples/02_database_test/: README.md  docker-compose.yml  ptest_config.yaml
examples/03_mock_service/: README.md  mock_config.yaml  ptest_config.yaml
examples/04_data_generation/: README.md  ptest_config.yaml
examples/05_test_suite/: README.md  ptest_config.yaml
examples/06_stateful_api_replay/: README.md  demo.sh
examples/07_sqlite_data_state_recovery/: README.md  demo.sh
examples/08_service_runtime_recovery/: README.md  demo.sh
examples/09_crash_dump_preservation/: README.md  demo.sh
examples/10_native_crash_capture/: README.md  crash_program.py  native_abort_case.json  product_runner_case.json
examples/quickstart/: README.md  demo.sh
isolation/: base.py  basic_engine_broken.py  docker_engine.py  enums.py  manager.py  package_manager.py  virtualenv_engine.py
objects/: db.py  db_enhanced.py  db_v2.py  manager.py
ptest/: __init__.py  core.py  environment.py  test_docker_simple.py
ptest/cases/: manager.py  result.py
ptest/isolation/: base.py  basic_engine.py  docker_engine.py  manager.py  package_cache.py  version_manager.py  virtualenv_engine.py
ptest/objects/: base.py  db.py  manager.py  service.py  web.py
scripts/: mysql_full_lifecycle_scenario.py
src/ptest/: __init__.py  api.py  cli.py  config.py  core.py  environment.py  main.py  test_virtualenv_simple.py  utils.py
tests/: README.md  TEST_REORGANIZATION_REPORT.md  __init__.py  run_tests.py  run_tests_new.py  test_data_generator.py
tests/data/: test_config.json
tests/e2e/: __init__.py
tests/integration/: __init__.py  (+4 more)
tools/: manager.py
(+152 files in other folders)
