[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptestx"
version = "1.2.0"
description = "综合测试框架 - 用于管理测试环境、测试对象和测试用例的完整生命周期"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pymysql>=1.1.0",
    "colorama>=0.4.6",
    "docker>=7.1.0",
    "packaging>=26.0",
    "virtualenv>=20.0.0",
    "faker>=35.0.0",
    "prance>=25.0.0",
    "openapi-spec-validator>=0.7.0",
]

[project.scripts]
ptest = "ptest.cli:main"
p = "ptest.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "types-docker>=7.1.0.20260109",
    "ruff>=0.1.0",
    "pip-audit>=2.6.0",
    "bandit>=1.7.5",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[mypy]
ignore_errors = false
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ptest.isolation.environment_migration",
    "ptest.isolation.parallel_installer",
    "ptest.isolation.registry",
    "ptest.isolation.manager",
    "ptest.isolation.docker_engine",
    "ptest.data.*",
]
ignore_errors = true

[tool.hatch.build.targets.wheel]
packages = ["src/ptest"]
