[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptestx"
version = "1.3.0"
description = "综合测试框架 - 用于管理测试环境、测试对象和测试用例的完整生命周期"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pymysql>=1.1.0",
    "colorama>=0.4.6",
    "docker>=7.1.0",
    "packaging>=26.0",
    "virtualenv>=20.0.0",
    "faker>=35.0.0",
    "prance>=25.0.0",
    "openapi-spec-validator>=0.7.0",
]

[project.scripts]
ptest = "ptest.cli:main"
p = "ptest.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "types-docker>=7.1.0.20260109",
    "ruff>=0.1.0",
    "pip-audit>=2.6.0",
    "bandit>=1.7.5",
    "twine>=4.0.0",
    "build>=1.0.0",
    # 类型存根 - 避免 MyPy 报错
    "types-PyYAML>=0.1.17",
    "types-tqdm>=0.1.0",
    "types-jsonschema>=4.22.0",
    "types-requests>=2.32.0",
    "types-colorama>=0.4.6",
]

# mypy 配置
# 使用: uv run mypy src/
[mypy]
ignore_errors = false
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true

# CI 中使用: uv run mypy src/ --ignore-missing-imports --show-error-codes
# 本地运行如遇第三方库类型存根问题，可使用 --ignore-missing-imports 参数

[[tool.mypy.overrides]]
module = [
    "ptest.isolation.environment_migration",
    "ptest.isolation.parallel_installer",
    "ptest.isolation.registry",
    "ptest.isolation.manager",
    "ptest.isolation.docker_engine",
    "ptest.data.*",
]
ignore_errors = true

[tool.hatch.build.targets.wheel]
packages = ["ptest"]
